mgmt, add a test case for deployment beginCreate