@@ -44,6 +44,8 @@
       --add-opens com.azure.resourcemanager.resources/com.azure.resourcemanager.resources=ALL-UNNAMED
       --add-opens com.azure.core/com.azure.core.http=com.azure.resourcemanager.resources
       --add-opens com.azure.core/com.azure.core.http.policy=com.azure.resourcemanager.resources
+
+      --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
     </javaModulesSurefireArgLine>
   </properties>
 
